--- a/atelier_1/Atelier1/app/src/main/res/values/strings.xml
+++ b/atelier_1/Atelier1/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
 
     <string name="action_settings">Settings</string>
     <string name="emailSupport">android.studio@android.com</string>
+    <string name="nav_import">Import</string>
+    <string name="nav_gallery">Gallery</string>
+    <string name="nav_slideshow">Slideshow</string>
+    <string name="nav_tools">Tools</string>
+    <string name="nav_communicate">Communicate</string>
+    <string name="nav_share">Share</string>
+    <string name="nav_send">Send</string>
 </resources>
